# boldtrax-arb

./: .gitignore  Cargo.toml  readme.md  tracing.toml
.cargo/: config.toml
.github/: copilot-instructions.md  diagram.md
.github/skills/add-aster/: SKILL.md
.github/skills/add-bybit/: SKILL.md
.github/skills/add-exchange/: SKILL.md
.github/skills/add-hyperliquid/: SKILL.md
.github/skills/hft-trading-rust/: SKILL.md
config/: default.toml
core/: Cargo.toml
core/src/: lib.rs  logger.rs  registry.rs  traits.rs  types.rs  utils.rs
core/src/config/: errors.rs  mod.rs  types.rs
core/src/http/: auth.rs  client.rs  errors.rs  mod.rs
core/src/manager/: account.rs  mod.rs  order.rs  position.rs  price.rs  types.rs
core/src/ws/: errors.rs  mod.rs  policy.rs  supervisor.rs
core/src/zmq/: client.rs  discovery.rs  mod.rs  protocol.rs  router.rs  server.rs  strategy_client.rs  strategy_server.rs
exchanges/: Cargo.toml
exchanges/src/: lib.rs  mock.rs
exchanges/src/aster/: auth.rs  client.rs  codec.rs  mappers.rs  types.rs  ws.rs
exchanges/src/binance/: auth.rs  client.rs  codec.rs  mappers.rs  mod.rs  types.rs  ws.rs
exchanges/src/bybit/: auth.rs  client.rs  codec.rs  mappers.rs  mod.rs  types.rs  ws.rs
exchanges/src/fixtures/: mod.rs
src/: dispatch.rs  main.rs  runner.rs  strategy.rs  test_strum.rs  test_strum2.rs
src/cli/: doctor.rs  manual.rs  mod.rs  probe.rs  stratctl.rs
src/cli/wizard/: app.rs  mod.rs  risk.rs
src/cli/wizard/exchanges/: aster.rs  binance.rs  bybit.rs  mod.rs  okx.rs
src/cli/wizard/strategies/: mod.rs  perp_perp.rs  spot_perp.rs
strategies/: Cargo.toml  README.md
strategies/src/: lib.rs  main.rs
strategies/src/arbitrage/: config.rs  decider.rs  engine.rs  execution.rs  margin.rs  mod.rs  oracle.rs  paper.rs  policy.rs  recovery.rs  runner.rs  stubs.rs  types.rs
strategies/src/arbitrage/perp_perp/: config.rs  decider.rs  execution.rs  mod.rs  poller.rs  stubs.rs  types.rs
strategies/src/arbitrage/perp_perp/tests/: decider.rs  engine.rs  mod.rs
strategies/src/arbitrage/spot_perp/: config.rs  decider.rs  execution.rs  mod.rs  stubs.rs  types.rs
strategies/src/arbitrage/spot_perp/tests/: decider.rs  mod.rs  runner.rs
strategies/src/arbitrage/tests/: commands.rs  decider.rs  margin.rs  mod.rs  oracle.rs  runner.rs  types.rs
strategies/src/manual/: mod.rs
