[package]
name = "boldtrax-bot"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["core", "exchanges", "strategies"]

[dependencies]
boldtrax-core = { path = "./core" }
exchanges = { path = "./exchanges" }
strategies = { path = "./strategies" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-config = "0.2"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
inquire = "0.7"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
rust_decimal = "1"
rustyline = "14.0"
strum = { version = "0.26", features = ["derive"] }
