[package]
name = "boldtrax-core"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "rkyv-32", "rkyv-validation"] }
rust_decimal = { version = "1", features = ["rkyv", "rkyv-safe"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
anyhow = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
url = "2"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
http = "1"
rkyv = { version = "0.7", default-features = false, features = ["std", "size_32", "validation", "bytecheck"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
zeromq = "0.5"
redis = { version = "0.28", features = ["tokio-comp"] }
bytecheck = "0.6"
bytes = "1.11.1"
moka = { version = "0.12.13", features = ["sync"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
tokio-util = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
rust_decimal_macros = "1"
