[package]
name = "strategies"
version = "0.1.0"
edition = "2024"

[dependencies]
boldtrax-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = "1"
strum = { version = "0.26", features = ["derive"] }
rustyline = "14.0"
clap = { version = "4.5", features = ["derive"] }
