[package]
name = "strategies"
version = "0.1.0"
edition = "2024"

[lib]
name = "strategies"
path = "src/lib.rs"

[dependencies]
boldtrax-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
rust_decimal = "1"
rust_decimal_macros = "1"
toml = "0.8"
strum = { version = "0.26", features = ["derive"] }
chrono = "0.4.43"
thiserror = "2.0.18"
async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
